Recorder webcam feed formatting: fix layout jump (#159)
* fix layout jump: add param for maintaining container size when clearing webcam video el
* add display: block to webcam video el to prevent space between video el and container
* add tests for maintain_container_size argument passed to recorder.stop
* add changeset

--- a/packages/record/scss/index.scss
+++ b/packages/record/scss/index.scss
@@ -3,4 +3,5 @@
 
 video.webcam-feed {
   transform: rotateY(180deg);
+  display: block;
 }
